--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 {% load static %}
+{% load i18n %}
+{% get_current_language as LANGUAGE_CODE %}
 <!DOCTYPE html>
-<html lang="de">
+<html lang="{{ LANGUAGE_CODE }}">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,27 +23,6 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
   <link rel="stylesheet" href="{% static 'css/components.css' %}">
-  
-  <style>
-    /* Prevent horizontal overflow */
-    html, body {
-      overflow-x: hidden;
-      max-width: 100vw;
-    }
-    
-    /* Ensure all containers respect viewport width */
-    * {
-      box-sizing: border-box;
-    }
-    
-    /* Container should use Tailwind defaults - don't override */
-    
-    /* Prevent images from causing overflow */
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-  </style>
 </head>
 <body>
   
@@ -58,6 +39,14 @@
     </main>
 
     {% include 'footer.html' %}
+
+  <!-- CSRF Token for JavaScript -->
+  {% csrf_token %}
+  <script>
+    // Make CSRF token available to JavaScript
+    window.csrftoken = document.querySelector('[name=csrfmiddlewaretoken]')?.value || 
+                       document.cookie.split('; ').find(row => row.startsWith('csrftoken='))?.split('=')[1] || '';
+  </script>
 
   <!-- JavaScript -->
   <script src="{% static 'js/main.js' %}"></script>
